# TMP

./: CMakeLists.txt
lab-2/: CMakeLists.txt  main.cpp
lab-3/: CMakeLists.txt  list.h  main.cpp  swap.cpp  template-functions.cpp  vector.h
lab-4/: CMakeLists.txt  vector.cpp  virtual-method.cpp
other/: CMakeLists.txt  noexcept-performance.cpp  swap.cpp  template-functions.cpp
